--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,30 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="favicon.ico" type="image/ico">
-    <title>New project</title>
+    <title>Грейд</title>
 </head>
-<body>
-
-<div class="container">
-    <div class="logo"></div>
-
-    <div>pizda</div>
-</div>
-
-</body>
+    <body>
+        <header>
+            <header__wrapper>
+                <div class="header__logo">
+                    <a href="#"><img class="header__logo-piсture" src="assets/images/logo.png" alt="Ой,изображение сломалось("> </a>
+                </div>
+                <div class="header__search">
+                    <div class="header__icon-wrapper">
+                        <div class="header__icon">
+                            <img src="assets/icons/search.svg">
+                        </div>
+                    </div>
+                    <input type="text" class="header__input" placeholder="">
+                </div>
+                <div class="header__user">
+                    <div class="header__name">
+                        Имя
+                    </div>
+                    <div class="header__avatar">
+                        <img class="header__photo" src="assets/icons/man.svg">
+                    </div>
+                </div>
+            </header__wrapper>
+    </body>
 </html>
